<resources>
    <string name="app_name">NCar</string>
    <string name="home">home</string>
    <string name="ajouter">Ajouter</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="nom_d_utilisateur_ou_courriel">Nom d\'utilisateur ou courriel</string>
    <string name="se_connecter">Se connecter</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="mon_compte">Mon compte</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="mes_locations">Mes locations</string>
    <string name="voiture_louer">Voiture à louer</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="modifier">Modifier</string>
    <string name="louer">Louer</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="town">Town</string>
    <string name="price">Price</string>
    <string name="seat_count">Seat count</string>
    <string name="carname">CarName</string>
    <string name="brand">Brand</string>
</resources>