<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DashboardActivity">

    <Button
        android:id="@+id/btnMyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:backgroundTint="#ff690f"
        android:drawableTint="#ff690f"
        android:padding="20dp"
        android:text="@string/mon_compte"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMyAnnounces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:backgroundTint="#ff690f"
        android:drawableTint="#ff690f"
        android:padding="20dp"
        android:text="@string/mes_annonces"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMyLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:backgroundTint="#ff690f"
        android:drawableTint="#ff690f"
        android:padding="20dp"
        android:text="@string/mes_locations"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnDisconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:backgroundTint="#ff690f"
        android:drawableTint="#ff690f"
        android:padding="20dp"
        android:text="@string/se_d_connecter"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>