<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

  <EditText
      android:id="@+id/etLoginUsername"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="175dp"
      android:layout_marginEnd="32dp"
      android:backgroundTint="#ff690f"
      android:drawableStart="@drawable/ic_outline_alternate_email_24"
      android:drawableTint="#ff690f"
      android:ems="10"
      android:foregroundTint="#ff690f"
      android:hint="@string/nom_d_utilisateur_ou_courriel"
      android:inputType="textPersonName"
      android:padding="20dp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etLoginPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="32dp"
      android:backgroundTint="#ff690f"
      android:drawableStart="@drawable/ic_baseline_vpn_key_24"
      android:drawableTint="#ff690f"
      android:ems="10"
      android:foregroundTint="#ff690f"
      android:hint="@string/mot_de_passe"
      android:inputType="textPassword"
      android:padding="20dp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etLoginUsername" />

  <CheckBox
      android:id="@+id/cbStayConnected"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="10dp"
      android:backgroundTint="#ff690f"
      android:button="@null"
      android:buttonTint="#ff690f"
      android:checked="false"
      android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
      android:drawableTint="#ff690f"
      android:foregroundTint="#ff690f"
      android:text="Se souvenir de moi"
      android:textAlignment="viewStart"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="32dp"
      android:layout_weight="1"
      android:backgroundTint="#ff690f"
      android:drawableTint="#ff690f"
      android:padding="20dp"
      android:text="@string/se_connecter"
      android:textColor="#FFFFFF"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cbStayConnected"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/txtRegister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:foregroundTint="#ff690f"
      android:text="Vous n'avez pas de compte ?"
      android:textColor="@color/black"
      android:textColorHighlight="#ff690f"
      android:textColorHint="#ff690f"
      android:textColorLink="#ff690f"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>